Validation du formulaire effective et intégration des messages d'erreurs

--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -222,6 +222,7 @@ input {
 }
 .formData[data-error-visible="true"]::after {
   opacity: 1;
+  text-align: left;
 }
 .formData[data-error-visible="true"] .text-control {
   border: 2px solid #e54858;
