--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -35,10 +35,10 @@ img {
   margin: 3.5%;
 }
 .header-logo {
-    float: left;
+  float: left;
 }
 .main-navbar {
-    float: right;
+  float: right;
 }
 .topnav a {
   float: left;
@@ -69,7 +69,9 @@ img {
 }
 
 @media screen and (max-width: 768px) {
-  .topnav a {display: none;}
+  .topnav a {
+    display: none;
+  }
   .topnav a.icon {
     float: right;
     display: block;
@@ -77,7 +79,9 @@ img {
 }
 
 @media screen and (max-width: 768px) {
-  .topnav.responsive {position: relative;}
+  .topnav.responsive {
+    position: relative;
+  }
   .topnav.responsive .icon {
     position: absolute;
     right: 0;
@@ -90,16 +94,16 @@ img {
   }
 }
 
-
-
- @media screen and (max-width: 540px) {
-  .topnav a {display: none;}
+@media screen and (max-width: 540px) {
+  .topnav a {
+    display: none;
+  }
   .topnav a.icon {
     float: right;
     display: block;
     margin-top: -15px;
   }
-} 
+}
 
 main {
   font-size: 130%;
@@ -111,8 +115,6 @@ main {
   margin: 1px 20px 15px;
   border-radius: 2rem;
   text-align: justify;
-
-
 }
 
 .modal-btn {
@@ -215,7 +217,7 @@ input {
   display: block;
   margin-top: 7px;
   margin-bottom: 7px;
-  text-align: right;
+  text-align: left;
   line-height: 0.3;
   opacity: 0;
   transition: 0.3s;
@@ -229,9 +231,9 @@ input {
 }
 
 input[data-error]::after {
-    content: attr(data-error);
-    font-size: 0.4em;
-    color: red;
+  content: attr(data-error);
+  font-size: 0.4em;
+  color: red;
 }
 .checkbox-label,
 .checkbox2-label {
@@ -323,7 +325,8 @@ input[data-error]::after {
   transform: rotate(-45deg);
 }
 .btn-submit,
-.btn-signup {
+.btn-signup,
+.btn-confirmation {
   background: #fe142f;
   display: block;
   margin: 0 auto;
@@ -528,3 +531,49 @@ footer {
   }
 }
 
+/* Form complete box */
+.successfull-container {
+  display: none;
+  position: fixed;
+  z-index: 2;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+  background-color: rgb(255, 255, 255);
+}
+
+.successfull-content {
+  position: relative;
+  margin: auto;
+  top: 3.5%;
+  bottom: 3.5%;
+  width: 100%;
+  height: 93%;
+  max-width: 500px;
+  background: #232323;
+  border-radius: 10px;
+  color: #fff;
+  padding-top: 10px;
+}
+
+.successfull-modal {
+  display: flex;
+  position: absolute;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+  padding: 15px 8%;
+  margin: 15px auto;
+}
+
+.successfull-message {
+  text-align: center;
+  font-size: 1.4em;
+}
+
+#btn-confirmation {
+  position: relative;
+  top: 300px;
+}
