--- a/modal.css
+++ b/modal.css
@@ -70,6 +70,7 @@ img {
 
 .topnav .icon {
   display: none;
+  color: #ff0000;
 }
 
 main {
@@ -376,7 +377,6 @@ input[data-error]::after {
   font-size: 16px;
 }
 .hero-section {
-  min-height: 93vh;
   border-radius: 10px;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
@@ -407,13 +407,14 @@ input[data-error]::after {
   z-index: 1;
 }
 .hero-headline {
-  font-size: 3.5em;
+  font-size: 6vw;
   font-weight: normal;
   white-space: nowrap;
 }
 .hero-text {
   width: 146%;
   font-weight: normal;
+  font-size: 2.5vw;
   margin-top: 57px;
   padding: 0;
 }
@@ -457,6 +458,7 @@ footer {
   }
   to {
     opacity: 1;
+    
   }
 }
 
@@ -515,12 +517,18 @@ footer {
   .topnav a.icon {
     float: right;
     display: block;
-    color: #fe142f;
- 
+
   }
 }
 
 @media screen and (max-width: 768px) {
+  .topnav {
+    overflow: hidden;
+    margin: 3.5%;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
   .topnav.responsive {
     position: relative;
   }
@@ -534,9 +542,18 @@ footer {
     display: block;
     text-align: left;
   }
+
   #logo {
-    width: 80%;
+    padding: 12px 12px;
+    margin: 5px;
+    width: 130px;
+  }
+
+  .header-logo {
     height: auto;
+    display: flex;
+    align-items: center;
+    width: fit-content;
   }
 }
 
@@ -547,13 +564,20 @@ footer {
   .topnav a.icon {
     float: right;
     display: block;
+  }
+
+  .bground {
+    display: none;
+
+    
   
   }
+
 }
 
 /* ----------------------------------- */
 
-@media screen and (max-width: 830px) {
+@media screen and (max-width: 800px) {
   .hero-section {
     display: block;
     box-shadow: unset;
@@ -561,7 +585,9 @@ footer {
   .hero-content {
     background: #fff;
     color: #000;
-    padding: 20px;
+    padding: 0;
+    min-width: auto;
+  
   }
   .hero-content::after {
     content: unset;
@@ -570,13 +596,15 @@ footer {
     display: none;
   }
   .hero-headline {
-    font-size: 3rem;
+    font-size: 9vw;
+
     white-space: normal;
+
   }
   .hero-text {
     width: unset;
-    font-size: 1.5rem;
-    height: auto;
+    font-size: 4vw;
+    margin-top: 1.5rem;
   }
   .hero-img img {
     border-radius: 10px;
@@ -590,7 +618,6 @@ footer {
   .copyrights {
     margin-top: 50px;
     text-align: center;
+    font-size: 5vw;
   }
-
 }
-
