--- a/modal.css
+++ b/modal.css
@@ -177,6 +177,7 @@ input {
   border-radius: 8px;
   font-size: 20px;
   height: 48px;
+  font-family: var(--font-default);
 }
 .formData[data-error]::after {
   content: attr(data-error);
@@ -414,7 +415,7 @@ input[data-error]::after {
 .hero-text {
   width: 146%;
   font-weight: normal;
-  font-size: 2.5vw;
+  font-size: 2vw;
   margin-top: 57px;
   padding: 0;
 }
@@ -458,7 +459,6 @@ footer {
   }
   to {
     opacity: 1;
-    
   }
 }
 
@@ -466,6 +466,7 @@ footer {
 .successfull-container {
   display: none;
   position: fixed;
+  padding: 3.5%;
   z-index: 2;
   left: 0;
   top: 0;
@@ -478,10 +479,8 @@ footer {
 .successfull-content {
   position: relative;
   margin: auto;
-  top: 3.5%;
-  bottom: 3.5%;
   width: 100%;
-  height: 93%;
+  height: 100%;
   max-width: 500px;
   background: #232323;
   border-radius: 10px;
@@ -489,24 +488,43 @@ footer {
   padding-top: 10px;
 }
 
-.successfull-modal {
-  display: flex;
-  position: absolute;
-  flex-direction: column;
-  justify-content: center;
-  height: 100%;
-  padding: 15px 8%;
-  margin: 15px auto;
-}
-
 .successfull-message {
   text-align: center;
-  font-size: 1.4em;
+  font-size: 1.5rem;
+  position: relative;
+  top: 40%;
 }
 
-#btn-confirmation {
+.btn-confirmation {
   position: relative;
-  top: 200px;
+  top: 70vh;
+}
+
+.close-success {
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  width: 32px;
+  height: 32px;
+  opacity: 1;
+  cursor: pointer;
+  transform: scale(0.7);
+}
+
+.close-success:before,
+.close-success:after {
+  position: absolute;
+  left: 15px;
+  content: " ";
+  height: 33px;
+  width: 3px;
+  background-color: #fff;
+}
+.close-success:before {
+  transform: rotate(45deg);
+}
+.close-success:after {
+  transform: rotate(-45deg);
 }
 
 /*-------------MEDIA QUERIES------------- */
@@ -517,7 +535,6 @@ footer {
   .topnav a.icon {
     float: right;
     display: block;
-
   }
 }
 
@@ -568,11 +585,26 @@ footer {
 
   .bground {
     display: none;
-
-    
-  
   }
 
+  .content {
+    max-width: none;
+    background: #232323;
+    border-radius: 10px;
+    overflow: hidden;
+    position: relative;
+    color: #fff;
+    padding-top: 10px;
+  }
+
+  .formData[data-error]::after {
+    line-height: 0.9;
+  }
+
+  .successfull-container {
+    padding: 0;
+    background: #232323;
+  }
 }
 
 /* ----------------------------------- */
@@ -587,7 +619,6 @@ footer {
     color: #000;
     padding: 0;
     min-width: auto;
-  
   }
   .hero-content::after {
     content: unset;
@@ -599,7 +630,6 @@ footer {
     font-size: 9vw;
 
     white-space: normal;
-
   }
   .hero-text {
     width: unset;
